2007-05-17  Brian Warner  <warner@lothar.com>

	* buildbot/status/words.py: refactor the IRC status bot into
	separate 'Contact' and 'Channel' classes. The base Contact class
	contains the interaction code: commands and responses. The
	IRCContact subclass (and IrcStatusBot 'Channel') handle the
	IRC-specific aspects. The plan is to write other subclasses for
	other IM protocols like AIM and Jabber.

2007-04-16  Brian Warner  <warner@lothar.com>

	* CREDITS: update list of contributors. Thank you all!

2007-04-13  Brian Warner  <warner@lothar.com>

	* buildbot/status/mail.py (MailNotifier): add the project name to
	the subject line and message body, to make it easier to
	distinguish email coming from different buildmasters. Thanks to
	Benoit Sigoure for the patch.
	* buildbot/test/test_status.py (Mail): update to match

2007-03-24  Brian Warner  <warner@lothar.com>

	* buildbot/steps/transfer.py: open all files in 'b' binary mode to
	avoid text-conversion problems between DOS/windows and unix.
	Thanks to Phil Thompson for the patch. Fixes SF#1674927.

2007-03-03  Brian Warner  <warner@lothar.com>

	* buildbot/status/html.py (_hush_pyflakes): hush a pyflakes
	warning about the use of Waterfall here

2007-03-01  Brian Warner  <warner@lothar.com>

	* buildbot/interfaces.py (IStatus.getBuilder): mention exceptions

2007-02-28  Brian Warner  <warner@lothar.com>

	* buildbot/changes/p4poller.py (P4Source): apply change from Scott
	Lamb to use a more optimal form of 'p4 changes', to reduce server
	load. He reports that this optimization was added to p4d release
	2005.2, but it should work in all versions. Closes #27.
	* buildbot/test/test_p4poller.py: match it

2007-02-27  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/*.py: move all web status stuff into a
	separate directory, in anticipation of splitting it into smaller
	pieces and adding more files. html.py was getting way too big.
	* buildbot/status/classic.css: move it too